sandc/test/fixtures/astRegression/shouldSucceed/Operations.sand
pub class Operations {
    associativity() {
        a - b - c
    }
    
    precedence() {
        -a ** b + c * d - e
    }

    eirdPrecedence() {
        -(if x {} else {}) ** b + - (if y {} else {}) * d - e
    }
}