sandc/test/fixtures/astRegression/shouldFail/productions/ifTypeGuardPseudex/EmptyIfBody.sand
pub class EmptyIfBody {
    foo() {
        let a = if let b = c {

        } else {
            c
        };
    }
}